RIA-18843 Remove extra java parameters from .bat and .sh files